# hrbf_surface

./: CMakeLists.txt  CMakePresets.json  README.md
assets/: pcd_culled.ply
ext/: CMakeLists.txt  nanoflann.cmake  tinyply.cmake
lib/: CMakeLists.txt  hrbf_surface_py.cpp
lib/hrbf_surf/: debug.h  hrbf.cpp  hrbf.h  hrbf_core.h  hrbf_phi_funcs.h  io.cpp  io.h  point_cloud.cpp  point_cloud.h  pou_surface.cpp  pou_surface.h  result.h  types.h
